# thgit

./: .gitignore  pyproject.toml
thgit/: __init__.py
thgit/src/: args_parser.py  base.py  commands.py  data.py  variables.py
